sandbox/sandbox/deploy/openshift/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
  labels:
    app.kubernetes.io/part-of: sovereign-sandbox
